Update Creating cloud-free composite rasters with geeMap.ipynb
added employer to authorship

--- a/Creating cloud-free composite rasters with geeMap.ipynb
+++ b/Creating cloud-free composite rasters with geeMap.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Sentinel 2 AOI Cloud-free Compositing tool \n",
-    "Author - Jeff Anderson\n",
+    "Author - Jeff Anderson - Integral Ecology Group\n",
     "\n",
     "The purpose of this tool is to:\n",
     "<ul>\n",
